deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: patchjam-web
  annotations:
    kubernetes.io/ingress.global-static-ip-name: patchjam-ip
  labels:
    app: patchjam
spec:
  backend:
    serviceName: patchjam-backend
    servicePort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: patchjam-backend
  labels:
    app: patchjam
spec:
  type: NodePort
  selector:
    app: patchjam
    tier: web
  ports:
    - port: 8080
      targetPort: 8080
